# attack-service

./: .env.sample  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  attack_service_log_config.ini  docker-compose.yaml  main.py  pyproject.toml  tests.py
internal/: config.py  crud.py  db.py  extractor.py  logger.py  models.py  on_startup.py  processor.py  test_extractor.py  test_on_startup.py  test_processor.py
middlewares/: check_service_status_middleware.py  save_service_statistic_middleware.py
routers/api/: __init__.py  tests.py
routers/api/v1/: router.py  tests_router.py
